--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@intlify/unplugin-vue-i18n": "^0.8.2",
     "autoprefixer": "^10",
     "axios": "^1.3.2",
+    "epic-spinners": "^2.0.0",
     "pinia": "^2.0.28",
     "postcss": "^8",
     "tailwindcss": "^3",
