--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,3 +1,4 @@
 {
-"rewrites": [{ "source": "/(.*)", "destination": "/" }]
+"version":2,
+"routes": [{"handle":"filesystem"},{ "src": "/.*", "dest": "/index.html" }]
 }
