--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.0.28",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "v-scroll-lock": "^1.3.1",
     "vue": "^3.2.45",
     "vue-cookies": "^1.8.2",
     "vue-country-flag-next": "^2.3.2",
